[package]
name = "listplay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "boolean"
path = "src/boolean.rs"

[[bin]]
name = "poll"
path = "src/poll.rs"

[[bin]]
name = "email"
path = "src/email.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
differ = "1.0"
lettre = "0.11"
rspotify = { version = "0.12", default-features = false, features = ["client-ureq", "ureq-rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"