[package]
name = "listplay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "boolean"
path = "src/boolean.rs"

[[bin]]
name = "poll"
path = "src/poll.rs"

[[bin]]
name = "email"
path = "src/email.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.11"
rspotify = { version = "0.15" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2.7.0"
tokio = { version = "1", features = ["full"] }
